Scope grammar data fetching to one level and cache it on both sides
The student grammar page fetched every published lesson twice on load
(flat list plus categories-with-lessons), each with full content,
Persian translations and quiz answers, and filtered it all in the
browser. The category-test page downloaded every category to use one.

Backend: GET /api/grammar?level= now returns one level's categories and
uncategorized lessons as light rows (no content/quiz), cached per level
with the user's learned flags and test status merged live. Added a
SQL-aggregated GET /api/grammar/level-summary (per-user cache, evicted
on lesson learned changes), a per-id lesson cache, and
GET /api/grammar/categories/{id} for the category test. DRAFT lessons
are no longer served to learners. Lesson writes previously never
evicted the cached category lists; every lesson/category write now
clears all grammar caches via @EvictGrammarCaches. The level-view query
binds separate params because category level is a STRING enum while
lesson level is ORDINAL.

Frontend: the grammar page fetches the level summary plus only the
current level via React Query ("ALL levels" removed). Lesson, practice
and category-test pages load through shared React Query caches, and
learned/test-result changes patch the cache and refresh level data.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>